<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3282B8"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".HomePage"><![CDATA[
    tools:context="com.journaldev.fusedlocationprovider.HomePage">
    ]]>

    <Button
        android:id="@+id/mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="360dp"
        android:background="#EC0101"
        android:padding="10sp"
        android:text="@string/Mark"
        android:textColor="#FFFFFF"
        android:textSize="12sp" />

    <Button
        android:id="@+id/order"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200sp"
        android:layout_marginTop="360dp"
        android:background="#EC0101"
        android:padding="10sp"
        android:text="@string/Order"
        android:textColor="#FFFFFF"
        android:textSize="12sp" />

    <FrameLayout
        android:layout_width="312dp"
        android:layout_height="179dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"

        android:layout_centerHorizontal="true"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="27dp"
        android:background="#FFFFFF">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="144dp"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginBottom="0dp"
            android:src="@drawable/_296950_avatar_business_face_people_icon_people_icon_png_512_512_preview" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="160sp"
            android:layout_marginTop="40sp"
            android:text="@string/name1"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="160sp"
            android:layout_marginTop="70sp"
            android:text="@string/age1"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_marginLeft="160sp"
            android:layout_marginTop="100sp"
            android:text="@string/status1"
            android:textColor="#000000"
            android:textSize="14sp" />
    </FrameLayout>

    <ListView
        android:id="@+id/itemlist"
        android:layout_width="308dp"
        android:layout_height="374dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="-38dp"
        android:entries="@array/places"
        android:background="#FFFFFF" />

    <ImageView
        android:id="@+id/addloc"
        android:layout_width="30dp"
        android:layout_height="39dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:src="@drawable/plus_2_128" />

    <TextView
        android:id="@+id/loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />

</RelativeLayout>