<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Primary"
    >

    <Button
        android:id="@+id/mark"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_centerVertical="true"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/Secondary"
        android:padding="10sp"
        android:text="@string/Mark"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/addLocation"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_centerVertical="true"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/Secondary"
        android:padding="10sp"
        android:text="Add Location"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.828"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:layout_constraintVertical_bias="0.0" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="312dp"
        android:layout_height="179dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:background="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="144dp"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginBottom="0dp"
            android:src="@drawable/avatar_icon" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="160sp"
            android:layout_marginTop="40sp"
            android:text="@string/name1"
            android:textColor="@color/Secondary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="160sp"
            android:layout_marginTop="70sp"
            android:text="@string/age1"
            android:textColor="@color/Secondary"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="160sp"
            android:layout_marginTop="100sp"
            android:text="@string/status1"
            android:textColor="@color/Secondary"
            android:textSize="14sp" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>